# Spaceship-game

./: .gitignore  .pre-commit-config.yaml  README.markdown  README.rst  pyproject.toml
frames/: game_over.txt  rocket_frame_1.txt
spaceship/: animations.py  constants.py  curses_tools.py  game.py  help_code.py  utils.py
