[tool.poetry]
name = "spaceship"
version = "0.1.0"
description = ""
authors = ["Roman <academboyhtml@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.11"
pre-commit = "^2.20.0"
windows-curses = "^2.3.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
